# monkeyislang

./: LICENSE  README.md  monkeyislang.py  pyproject.toml
examples/: addone.mi  chromatic.mi  closure.mi  factorial.mi  identity.mi  if.mi  test.mi
tests/: test_integration.py  test_monkey.py
